--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
 <html>
 <head>
-    <script src="js/test.js"></script>
-    <link rel="stylesheet" href="css/test.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="test">hello world</div>
+    <div class="site">
+    	<div class="section1">
+	    	<div class="header">
+	    		<div class="headerNav">
+	    			<a class="menu">开启旅橙</a>
+	    			<a class="menu">纽约酒店精选</a>
+	    			<a>
+	    				<img src="./resource/logo1.png">
+	    			</a>
+	    			<a class="menu">奢华体验</a>
+	    			<a class="menu">定制服务</a>
+	    		</div>
+	   		</div>
+   		</div>
+   		<div class="section2">
+   			<img src="./resource/index3.jpeg">
+   		</div>
+   		<div class="section3">
+   		</div>
+    </div>
 </body>
 </html>
