--- a/index.html
+++ b/index.html
@@ -1,9 +1,34 @@
 <html>
 <head>
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="js/test.js"></script>
     <link rel="stylesheet" href="css/test.css">
 </head>
 <body>
+    <div id="header" class="normal">header</div>
     <div class="test">hello world</div>
+    
+    <div id="footer">
+        <div class="main-content">
+            <div class="news-updates">
+                <div></div>
+                <div class="sign-up-form">
+                    <input type="text" placeholder="Email Address">
+                    <input type="button" value="SIGN UP">
+                </div>
+            </div>
+            <div class="contact-container">
+                <div class="qf-code">
+                    <img src="">
+                    <p>扫描二维码</p>
+                    <p>关注公众号</p>
+                </div>
+                <div class="contact">
+            </div>
+        </div>
+        <div class="links">
+            
+        </div>
+    </div>
 </body>
 </html>
