finish section1+navheader

--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     	<div class="section1">
 	    	<div class="header">
 	    		<div class="headerNav">
-	    			<a class="menu">开启旅橙</a>
-	    			<a class="menu">纽约酒店精选</a>
-	    			<a>
+	    			<a href="http://vip.lvcheng.us/start/" class="menu">开启旅橙</a>
+	    			<a href="href="http://vip.lvcheng.us/hotels-nyc-1/"" class="menu">纽约酒店精选</a>
+	    			<a id="logo">
 	    				<img src="./resource/logo1.png">
 	    			</a>
-	    			<a class="menu">奢华体验</a>
-	    			<a class="menu">定制服务</a>
+	    			<a href="http://vip.lvcheng.us/blog/" class="menu">奢华体验</a>
+	    			<a href="http://vip.lvcheng.us/customize" class="menu">定制服务</a>
 	    		</div>
+	   		</div>
+	   		<div class="slogan">
+	   			<img src="./resource/index2.png">
 	   		</div>
    		</div>
    		<div class="section2">
