--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	    		<div class="headerNav">
 	    			<a href="http://vip.lvcheng.us/start/" class="menu">开启旅橙</a>
 	    			<a href="href="http://vip.lvcheng.us/hotels-nyc-1/"" class="menu">纽约酒店精选</a>
-	    			<a id="logo">
+	    			<a href="http://lvcheng.info" id="logo">
 	    				<img src="./resource/logo1.png">
 	    			</a>
 	    			<a href="http://vip.lvcheng.us/blog/" class="menu">奢华体验</a>
@@ -22,6 +22,9 @@
    		</div>
    		<div class="section2">
    			<img src="./resource/index3.jpeg">
+   			<p class="p1">旅诚为您提供一站式服务，</p>
+   			<p class="p1">从帮您选择目的地，到送上飞机安全返航为止</p>
+   			<p class="p2">旅橙是一个由来自NYU、Columbia、Parsons、Fordham、Hofstra的留学生所创立的新锐旅行公司。旅行不该是走马观花、到此一游，而应该深入体会原汁原味的当地文化，品尝最地道的特色小吃，和当地人交流并在陌生的城市交到新的朋友。我们自己的知识与热情扮演中美文化交流使者的角色，为您的旅行提供另外一种选择。</p>
    		</div>
    		<div class="section3">
    		</div>
