--- a/index.html
+++ b/index.html
@@ -1,33 +1,74 @@
 <html>
+
 <head>
     <link rel="stylesheet" href="css/main.css">
+    <!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+	<script src="https://code.jquery.com/jquery-2.1.4.min.js">
+	</script>
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
+
 <body>
     <div class="site">
-    	<div class="section1">
-	    	<div class="header">
-	    		<div class="headerNav">
-	    			<a href="http://vip.lvcheng.us/start/" class="menu">开启旅橙</a>
-	    			<a href="href="http://vip.lvcheng.us/hotels-nyc-1/"" class="menu">纽约酒店精选</a>
-	    			<a href="http://lvcheng.info" id="logo">
-	    				<img src="./resource/logo1.png">
-	    			</a>
-	    			<a href="http://vip.lvcheng.us/blog/" class="menu">奢华体验</a>
-	    			<a href="http://vip.lvcheng.us/customize" class="menu">定制服务</a>
-	    		</div>
-	   		</div>
-	   		<div class="slogan">
-	   			<img src="./resource/index2.png">
-	   		</div>
-   		</div>
-   		<div class="section2">
-   			<img src="./resource/index3.jpeg">
-   			<p class="p1">旅诚为您提供一站式服务，</p>
-   			<p class="p1">从帮您选择目的地，到送上飞机安全返航为止</p>
-   			<p class="p2">旅橙是一个由来自NYU、Columbia、Parsons、Fordham、Hofstra的留学生所创立的新锐旅行公司。旅行不该是走马观花、到此一游，而应该深入体会原汁原味的当地文化，品尝最地道的特色小吃，和当地人交流并在陌生的城市交到新的朋友。我们自己的知识与热情扮演中美文化交流使者的角色，为您的旅行提供另外一种选择。</p>
-   		</div>
-   		<div class="section3">
-   		</div>
+        <div class="section1">
+            <div class="header">
+                <div class="headerNav">
+                    <a href="http://vip.lvcheng.us/start/" class="menu">开启旅橙</a>
+                    <a href="href=" http://vip.lvcheng.us/hotels-nyc-1/ "" class="menu">纽约酒店精选</a>
+                    <a href="http://lvcheng.info" id="logo">
+                        <img src="./resource/logo1.png">
+                    </a>
+                    <a href="http://vip.lvcheng.us/blog/" class="menu">奢华体验</a>
+                    <a href="http://vip.lvcheng.us/customize" class="menu">定制服务</a>
+                </div>
+            </div>
+            <div class="slogan">
+                <img src="./resource/index2.png">
+            </div>
+        </div>
+        <div class="section2">
+            <img src="./resource/index3.jpeg">
+            <p class="p1">旅诚为您提供一站式服务，</p>
+            <p class="p1">从帮您选择目的地，到送上飞机安全返航为止</p>
+            <p class="p2">旅橙是一个由来自NYU、Columbia、Parsons、Fordham、Hofstra的留学生所创立的新锐旅行公司。旅行不该是走马观花、到此一游，而应该深入体会原汁原味的当地文化，品尝最地道的特色小吃，和当地人交流并在陌生的城市交到新的朋友。我们自己的知识与热情扮演中美文化交流使者的角色，为您的旅行提供另外一种选择。</p>
+        </div>
+        <div class="section3">
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="4000">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="1" class></li>
+                </ol>
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img src="./resource/开始-加勒比.jpg" alt="加勒比">
+                    
+                    </div>
+                    <div class="item">
+                        <img src="./resource/开始-阿拉斯加.jpg" alt="阿拉斯加">
+                    </div>
+                    
+                </div>
+                <!-- Controls -->
+                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+        <div class="section4">
+        	<img src="./resource/index4.jpeg">
+        </div>
     </div>
 </body>
 </html>
