--- a/index.html
+++ b/index.html
@@ -47,11 +47,14 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
-                        <img src="./resource/开始-加勒比.jpg" alt="加勒比">
-                    
+                    	<a href = "http://vip.lvcheng.us/alaska">
+                       		<img src="./resource/开始-加勒比.jpg" alt="加勒比">
+                    	</a>
                     </div>
                     <div class="item">
-                        <img src="./resource/开始-阿拉斯加.jpg" alt="阿拉斯加">
+                    	<a href = "http://vip.lvcheng.us/alaska">
+                    	    <img src="./resource/开始-阿拉斯加.jpg" alt="阿拉斯加">
+                    	</a>
                     </div>
                     
                 </div>
