--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 
 <head>
+     <title>旅·诚</title>
+    <meta charset="utf-8">
+    <link rel="shortcut icon" type="image/x-icon" href="./resource/icon.png">
     <link rel="stylesheet" href="css/main.css">
     <!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
