--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
         <div class="section4">
         	<img src="./resource/index4.jpeg">
         </div>
+        <div class="journey">
+            <img src="resource/journey.jpg">
+            <div class="start-journey">
+                <a href="http://vip.lvcheng.us/shop-fulton">开启你的旅程</a>
+            </div>
+        </div>
         <div class="footer-wrapper">
             <div id="footer">
                 <div class="main-content">
@@ -90,7 +96,7 @@
                     </div>
                     <div class="contact-container">
                         <div class="qf-code">
-                            <img src="resource/qr_code.jpeg">
+                            <div class="qf-container"><img src="resource/qr_code.jpeg"></div>
                             <p>扫描二维码</p>
                             <p>关注公众号</p>
                         </div>
