--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>旅·诚</title>
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="js/main.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="./resource/icon.png">
     <link rel="stylesheet" href="css/main.css">
     <!-- Latest compiled and minified CSS -->
@@ -11,19 +12,32 @@
 
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-	<script src="https://code.jquery.com/jquery-2.1.4.min.js">
-	</script>
+	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 
 <body>
     <div class="site">
+        <div class="float-nav hidden" id="hidden-nav">
+            <div class="cell">
+                <a href="http://vip.lvcheng.us/start/">开启旅橙</a>
+            </div>
+            <div class="cell">
+                <a href="http://vip.lvcheng.us/hotels-nyc-1/">纽约酒店精选</a>
+            </div>
+            <div class="cell">
+                <a href="http://vip.lvcheng.us/blog/">奢华体验</a>
+            </div>
+            <div class="cell">
+                <a href="http://vip.lvcheng.us/customize">定制服务</a>
+            </div>
+        </div>
         <div class="section1">
             <div class="header">
                 <div class="headerNav">
                     <a href="http://vip.lvcheng.us/start/" class="menu">开启旅橙</a>
-                    <a href="href=" http://vip.lvcheng.us/hotels-nyc-1/ "" class="menu">纽约酒店精选</a>
+                    <a href="http://vip.lvcheng.us/hotels-nyc-1/" class="menu">纽约酒店精选</a>
                     <a href="http://lvcheng.info" id="logo">
                         <img src="./resource/logo1.png">
                     </a>
