--- a/index.html
+++ b/index.html
@@ -76,6 +76,35 @@
         <div class="section4">
         	<img src="./resource/index4.jpeg">
         </div>
+        <div class="section5">
+            <div class="contentBlock parachute">
+                <div class="activity">
+                    <span>高 空 跳 伞</span>
+                    <a href="http://vip.lvcheng.us/skydiving">
+                        <button type="button">即刻体验</button>
+                    </a>
+                </div>
+            </div>
+            <div class="contentBlock dive">
+                <div class="activity">
+                    <span>深 海 潜 水</span>
+                    <a href="">
+                        <button type="button">即刻体验</button>
+                    </a>
+                </div>
+            </div>
+            <div class="contentBlock helicopt">
+                <div class="activity">
+                    <span>飞 机 驾 驶</span>
+                    <a href="http://vip.lvcheng.us/flight">
+                        <button type="button">即刻体验</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="section6">
+            <img src="./resource/index5.jpg">
+        </div>
         <div class="footer-wrapper">
             <div id="footer">
                 <div class="main-content">
