added floating qr code

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <div class="site">
         <div class="float-nav hidden" id="hidden-nav">
             <div class="cell">
-                <a href="http://vip.lvcheng.us/start/">开启旅橙</a>
+                <a href="http://vip.lvcheng.us/starttravel/">开启旅橙</a>
             </div>
             <div class="cell">
                 <a href="http://vip.lvcheng.us/hotels-nyc-1/">纽约酒店精选</a>
             </div>
             <div class="cell">
-                <a href="http://vip.lvcheng.us/blog/">奢华体验</a>
+                <a href="http://vip.lvcheng.us/luxury-experience/">奢华体验</a>
             </div>
             <div class="cell">
                 <a href="http://vip.lvcheng.us/customize">定制服务</a>
@@ -99,15 +99,6 @@
         <div class="footer-wrapper">
             <div id="footer">
                 <div class="main-content">
-                    <div class="news-updates">
-                        <div class="news-updates-content">
-                            Get news and updates
-                        </div>
-                        <div class="sign-up-form">
-                            <input type="text" placeholder="Email Address">
-                            <input type="button" value="SIGN UP">
-                        </div>
-                    </div>
                     <div class="contact-container">
                         <div class="qf-code">
                             <div class="qf-container"><img src="resource/qr_code.jpeg"></div>
@@ -141,6 +132,11 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="float-qr">
+            <div class="mask"></div>
+            <div class="text-content">个性定制，私人专享。身未动，心已远，旅橙顾问为您在线解答</div>
+            <div class="img-wrapper"><img src="resource/qr_code.jpeg"></div>
         </div>
     </div>
 </body>
