main page changes

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <div class="site">
         <div class="float-nav hidden" id="hidden-nav">
             <div class="cell">
-                <a href="http://vip.lvcheng.us/starttravel/">开启旅橙</a>
+                <a href="http://vip.lvcheng.us/starttravel/">开启旅程</a>
             </div>
             <div class="cell">
-                <a href="http://vip.lvcheng.us/hotels-nyc-1/">纽约酒店精选</a>
+                <a href="http://vip.lvcheng.us/hotels-nyc-1/">酒店精选</a>
             </div>
             <div class="cell">
                 <a href="http://vip.lvcheng.us/luxury-experience/">奢华体验</a>
@@ -36,12 +36,12 @@
         <div class="section1">
             <div class="header">
                 <div class="headerNav">
-                    <a href="http://vip.lvcheng.us/start/" class="menu">开启旅橙</a>
-                    <a href="http://vip.lvcheng.us/hotels-nyc-1/" class="menu">纽约酒店精选</a>
+                    <a href="http://vip.lvcheng.us/starttravel/" class="menu">开启旅程</a>
+                    <a href="http://vip.lvcheng.us/hotels-nyc-1/" class="menu">酒店精选</a>
                     <a href="http://lvcheng.info" id="logo">
                         <img src="./resource/logo1.png">
                     </a>
-                    <a href="http://vip.lvcheng.us/blog/" class="menu">奢华体验</a>
+                    <a href="http://vip.lvcheng.us/luxury-experience/" class="menu">奢华体验</a>
                     <a href="http://vip.lvcheng.us/customize" class="menu">定制服务</a>
                 </div>
             </div>
@@ -61,11 +61,13 @@
                 <ol class="carousel-indicators">
                     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                     <li data-target="#carousel-example-generic" data-slide-to="1" class></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="2" class></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="3" class></li>
                 </ol>
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
-                    	<a href = "http://vip.lvcheng.us/alaska">
+                    	<a href = "http://vip.lvcheng.us/caribbean-index">
                        		<img src="./resource/开始-加勒比.jpg" alt="加勒比">
                     	</a>
                     </div>
@@ -74,7 +76,16 @@
                     	    <img src="./resource/开始-阿拉斯加.jpg" alt="阿拉斯加">
                     	</a>
                     </div>
-                    
+                    <div class="item">
+                    	<a href = "http://vip.lvcheng.us/nationpark15d">
+                    	    <img src="./resource/开始-美西.gif" alt="美西">
+                    	</a>
+                    </div>
+                    <div class="item">
+                    	<a href = "http://vip.lvcheng.us/florida9d">
+                    	    <img src="./resource/开始-佛州.gif" alt="佛州">
+                    	</a>
+                    </div>
                 </div>
                 <!-- Controls -->
                 <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
@@ -92,26 +103,13 @@
         </div>
 
         <div class="section5">
-            <div class="contentBlock parachute">
+            <img src="./resource/奢华体验.gif">
+            <div class="experience">
+                <h3>&nbsp;</h3>
+                <h2>奢华体验</h2>
+                <h3><strong>我们带您——</strong><br>探索大海深处的神秘世界<br>欣赏万米高空中的落日余晖</h3>
                 <div class="activity">
-                    <span>高 空 跳 伞</span>
-                    <a href="http://vip.lvcheng.us/skydiving">
-                        <button type="button">即刻体验</button>
-                    </a>
-                </div>
-            </div>
-            <div class="contentBlock dive">
-                <div class="activity">
-                    <span>深 海 潜 水</span>
-                    <a href="">
-                        <button type="button">即刻体验</button>
-                    </a>
-                </div>
-            </div>
-            <div class="contentBlock helicopt">
-                <div class="activity">
-                    <span>飞 机 驾 驶</span>
-                    <a href="http://vip.lvcheng.us/flight">
+                    <a href="http://vip.lvcheng.us/luxury-experience">
                         <button type="button">即刻体验</button>
                     </a>
                 </div>
@@ -152,6 +150,7 @@
                 </div>
                 <div class="links">
                     <div class="link-contents">
+                        <span><a href="http://vip.lvcheng.us/new-about">旅橙简介</a></span>
                         <span><a href="http://vip.lvcheng.us/privacy">隐私条款</a></span>
                         <span><a href="http://vip.lvcheng.us/faq">常见问答</a></span>
                         <span><a href="http://vip.lvcheng.us/terms-conditions">服务条款</a></span>
