update floating footer

--- a/index.html
+++ b/index.html
@@ -164,8 +164,20 @@
         </div>
         <div class="float-qr">
             <div class="mask"></div>
-            <div class="text-content">个性定制，私人专享。身未动，心已远，旅橙顾问为您在线解答</div>
-            <div class="img-wrapper"><img src="resource/qr_code.jpeg"></div>
+            <div class="float-main-content">
+                <div class="img-wrapper">
+                    <img src="resource/qr_code.jpeg">
+                </div>
+                <div class="scan">
+                    <img src="resource/scan.png">
+                </div>
+            </div>
+            <div class="float-qr-slogan">
+                <img src="resource/slogan.png">
+            </div>
+            <div class="close">
+                <img src="resource/close.png">
+            </div>
         </div>
     </div>
 </body>
